--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.5.0",
+    "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
