--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,11 @@
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules":{
     "react/no-unescaped-entities":"off"
-  }
+  },
+  "overrides": [
+        {
+         "files": ["*.ts", "*.tsx"],
+         "parser": "@typescript-eslint/parser"
+       }
+    ]
 }
